# datacompass

./: .gitignore  CLAUDE.md  README.md  STATUS.md  alembic.ini  pyproject.toml
docs/: api-reference.md  architecture.md  cli-reference.md  oidc-implementation-guide.md  user-guide.md
docs/dev/: adapter-implementation-guide.md  adapter-lessons-learned.md  terminal-first-design-philosophy.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/docs/: semantic-urls.md
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: BreachTable.tsx  CampaignTable.tsx  ChannelTable.tsx  CollapsibleSidebar.tsx  DQConfigCreateModal.tsx  DQConfigDetailModal.tsx  DQConfigTable.tsx  DQStatusBadge.tsx  ExpectationModal.tsx  ImpactAnalysis.tsx  Layout.tsx  LineageList.tsx  ObjectDetail.tsx  ObjectTable.tsx  ProtectedRoute.tsx  ScheduleTable.tsx  SearchBar.tsx  SearchDropdown.tsx  SourceCard.tsx  TagEditor.tsx  UserMenu.tsx
frontend/src/context/: AuthContext.tsx  SidebarContext.tsx  ThemeContext.tsx
frontend/src/hooks/: useDQ.ts  useDeprecation.ts  useLineage.ts  useNotifications.ts  useObjects.ts  useSchedules.ts  useSearch.ts  useSidebar.ts  useSources.ts
frontend/src/pages/: BrowsePage.tsx  DQHubPage.tsx  DeprecationHubPage.tsx  HomePage.tsx  LoginPage.tsx  ObjectDetailPage.tsx  ObjectRedirect.tsx  SchedulerHubPage.tsx  SearchResultsPage.tsx  SettingsPage.tsx
frontend/src/test/: setup.ts
frontend/src/utils/: urls.ts
frontend/tests/: BrowsePage.test.tsx  HomePage.test.tsx  ObjectDetailPage.test.tsx
plans/: cloud-database-adapters.md
plans/prod-requirements/: credential-security.md
scripts/: seed_demo_data.py
specs/foundation/: implementation-roadmap.md  technical-specification.md
specs/phase-9/: authentication-specification.md
specs/remaining-phases/: governance-specification.md  implementation-roadmap.md
src/datacompass/: __init__.py
src/datacompass/api/: __init__.py  app.py  dependencies.py  exceptions.py  schemas.py
src/datacompass/cli/: __init__.py  helpers.py  main.py
src/datacompass/config/: __init__.py  settings.py
src/datacompass/core/: __init__.py  database.py  events.py
tests/: __init__.py  conftest.py
tests/api/: conftest.py  test_auth_api.py  test_deprecation.py  test_dq.py  test_health.py  test_lineage.py  test_notifications.py  test_objects.py  test_schedules.py  test_search.py  test_sources.py  test_usage.py
tests/cli/: __init__.py  test_auth_commands.py  test_lineage_commands.py  test_main.py  test_search_commands.py  test_usage_commands.py
tests/core/adapters/: test_registry.py  test_snowflake.py
tests/core/repositories/: test_auth.py  test_catalog_object.py  test_data_source.py  test_dependency.py  test_deprecation.py  test_dq.py  test_search.py  test_usage.py
tests/core/services/: test_auth_service.py  test_catalog_service.py  test_dq_service.py  (+9 more)
(+81 files in other folders)
